--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Main.css" />
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="all.min.css" />
     <title>Playstation Web site</title>
   </head>
