--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <!-- Start header -->
       <header>
-        <img src="playstation_img/logo.png" class="logo" />
+        <img src="images/logo.png" class="logo" />
         <nav>
           <ul>
             <li>
@@ -46,7 +46,7 @@
         <!-- End Information Card -->
         <!-- Start card that contain controller -->
         <div class="col2">
-          <img src="playstation_Img/controller.png" class="control" />
+          <img src="images/controller.png" class="control" />
         </div>
       </section>
     </div>
